--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="./assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -236,7 +237,7 @@
               </div>
             </div>
           </div>
-
+<!-- Number 4 -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -261,11 +262,12 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="./assets/img/final project html/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/SHIN VERSE WHITE.jpg" alt="./assets/img/index.html" class="img-fluid">
+                  <img src="./assets/img/SHIN STUDIOS WHITE.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -285,11 +287,12 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/flowerphoto.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/flower.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/flowerphoto.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -302,7 +305,31 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/flower.jpg"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/flowerphoto.jpg"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="././assets/img/final project illustrator  copy.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="././assets/img/final project illustrator  copy.pdf" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Poster</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">Jan 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="././assets/img/final project illustrator  copy.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -310,6 +337,130 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="./assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="./assets/img/japan copy.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Post Card</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./assets/img/japan copy.jpg"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf" >
+                <div class="work-img">
+                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Brochure</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep.2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+<!-- Number 4 -->
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="./assets/img/flower img.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Promotional Video</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">After Effects</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./assets/img/final project AE.mp4"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="./assets/img/flower.j[G" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="./assets/img/SFSD" alt="./assets/img/index.html" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Website</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./assets/img/index.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="./assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="./assets/img/flower img.png" alt="./assets/img/index.html" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Websi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./assets/img/index.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section><!-- End Portfolio Section -->
