--- a/index.html
+++ b/index.html
@@ -339,22 +339,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/Hokkaido.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/japan copy.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/Hokkaido.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Post Card</h2>
+                    <h2 class="w-title">Itinerary Planner</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/japan copy.jpg"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/Hokkaido.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
