--- a/index.html
+++ b/index.html
@@ -364,22 +364,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf" >
+              <a href="./assets/img/Brand guidebook.pdf" >
                 <div class="work-img">
-                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/Brand guidebook.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Brochure</h2>
+                    <h2 class="w-title">Brand Guidebook</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep.2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/Brand guidebook.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -389,22 +389,22 @@
 <!-- Number 4 -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/colour theory.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/flower img.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
+                  <img src="./assets/img/colour theory.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Promotional Video</h2>
+                    <h2 class="w-title">Color Theory</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">After Effects</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/final project AE.mp4"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/colour theory.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -414,22 +414,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/flower.j[G" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/BRAND GUIDEBOOK .pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/SFSD" alt="./assets/img/index.html" class="img-fluid">
+                  <img src="./assets/img/BRAND GUIDEBOOK .pdf" alt="./assets/img/index.html" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Website</h2>
+                    <h2 class="w-title">Personal Brand Guidebook</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/index.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/BRAND GUIDEBOOK .pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
