--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Color Theory</h2>
+                    <h2 class="w-title">Colour Theory</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -443,22 +443,22 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/flower.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/T-shirt.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/flower img.png" alt="./assets/img/index.html" class="img-fluid">
+                  <img src="./assets/img/T-shirt.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Websi</h2>
+                    <h2 class="w-title">Company Swag</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/index.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/T-shirt.pdf"></a> </a><span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
