--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Photoshop Concept Design</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Photoshop</span> / <span class="w-date">Dec 2</span>
+                      <span class="w-ctegory">Photoshop</span> / <span class="w-date">Dec 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -204,7 +204,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Post Card</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">Oct 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -229,7 +229,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Brochure</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep.2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">Apr 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -254,7 +254,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Promotional Video</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">After Effects</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">After Effects</span> / <span class="w-date">Jun 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -279,7 +279,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">May 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -353,7 +353,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Itinerary Planner</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">Jun 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -378,7 +378,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Brand Guidebook</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep.2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">July 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -403,7 +403,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colour Theory</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">Feb 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -428,7 +428,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Personal Brand Guidebook</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Indesign</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">Apr 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -453,7 +453,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Business Card</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">May 2022 </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
