--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                       Hi, my name is yeil and I'm a graduate from Vancouver Career College. 
                     </p>
                     <p class="lead">
-                      I am passionate and motivated in creating simplistic, stylish, and modern designs.
+                   I was born in korea and moved to canada in 2006. I found a passion and love in art at a very young age and 
+                   decided that I wanted to do something creative for a career. It took me awhile to figure out what I really enjoy and Graphic design 
+                   was the path for me.  
 
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvina
+                    I really love to draw, take photography and help out church through design.
                     </p>
                   </div>
                 </div>
