--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="work-box">
               <a href="./assets/img/Business Card.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/Business Card.pdf" alt="" class="img-fluid">
+                  <img src="./assets/img/Business Card.pdf" alt="./assets/img/business card - back.pdf" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
