--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Business Card</h2>
+                    <h2 class="w-title">Business card</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Illustrator</span> / <span class="w-date">May 2022 </span>
                     </div>
