--- a/index.html
+++ b/index.html
@@ -316,11 +316,12 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="work-box">
-              <a href="././assets/img/final project illustrator  copy.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project illustrator  copy.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="././assets/img/final project illustrator  copy.pdf" alt="" class="img-fluid">
+                  <img src="./assets/img/final project illustrator  copy.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -333,7 +334,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="././assets/img/final project illustrator  copy.pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/final project illustrator  copy.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -345,7 +346,7 @@
             <div class="work-box">
               <a href="./assets/img/Hokkaido.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/Hokkaido.pdf" alt="" class="img-fluid">
+                  <img src="./assets/img/Hokkaido.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -370,7 +371,7 @@
             <div class="work-box">
               <a href="./assets/img/Brand guidebook.pdf" >
                 <div class="work-img">
-                  <img src="./assets/img/Brand guidebook.pdf" alt="" class="img-fluid">
+                  <img src="./assets/img/Brand guidebook.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -395,7 +396,7 @@
             <div class="work-box">
               <a href="./assets/img/colour theory.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/colour theory.pdf" alt="" class="img-fluid">
+                  <img src="./assets/img/colour theory.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -420,7 +421,7 @@
             <div class="work-box">
               <a href="./assets/img/BRAND GUIDEBOOK .pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/BRAND GUIDEBOOK .pdf" alt="./assets/img/index.html" class="img-fluid">
+                  <img src="./assets/img/BRAND GUIDEBOOK .jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -445,7 +446,7 @@
             <div class="work-box">
               <a href="./assets/img/Business Card.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/Business Card.pdf" alt="./assets/img/business card - back.pdf" class="img-fluid">
+                  <img src="./assets/img/Business Card.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
