--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./assets/img/smile.png" rel="icon">
+  <link href="./assets/img/shin logo.png" rel="icon">
  
 
   <!-- Vendor CSS Files -->
@@ -135,7 +135,7 @@
 
                     </p>
                     <p class="lead">
-                    I really love to draw, take photography and help out church through design.
+                    I love to draw, take photography and design graphics for my church.
                     </p>
                   </div>
                 </div>
