--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="././assets/img/project1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="././assets/img/project1.jpg"  data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="././assets/img/project1.jpg" alt="" class="img-fluid">
                 </div>
@@ -344,7 +344,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Hokkaido.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/Hokkaido.pdf"  target="_blank"> <data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/Hokkaido.jpg" alt="" class="img-fluid">
                 </div>
@@ -359,7 +359,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/Hokkaido.pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/Hokkaido.pdf" target="_blank"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -369,7 +369,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Brand guidebook.pdf" >
+              <a href="./assets/img/Brand guidebook.pdf" target="_blank">
                 <div class="work-img">
                   <img src="./assets/img/Brand guidebook.jpg" alt="" class="img-fluid">
                 </div>
@@ -384,7 +384,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/Brand guidebook.pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/Brand guidebook.pdf" target="_blank"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
