--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="././assets/img/project1.jpg"  data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="././assets/img/project1.jpg" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="././assets/img/project1.jpg" alt="" class="img-fluid">
                 </div>
@@ -177,7 +177,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Photoshop Concept Design</h2>
+                    <h2 class="w-title">Concept</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Photoshop</span> / <span class="w-date">Dec 2021</span>
                     </div>
@@ -194,7 +194,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/japan copy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/japan copy.jpg" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/japan copy.jpg" alt="" class="img-fluid">
                 </div>
@@ -219,7 +219,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf" >
+              <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf">
                 <div class="work-img">
                   <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
                 </div>
@@ -244,7 +244,7 @@
 <!-- Number 4 -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project AE.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project AE.mp4" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/flower img.png" alt="./assets/img/final project AE.mp4" class="img-fluid">
                 </div>
@@ -252,7 +252,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Promotional Video</h2>
+                    <h2 class="w-title">Video</h2>
                     <div class="w-more">
                       <span class="w-ctegory">After Effects</span> / <span class="w-date">Jun 2022</span>
                     </div>
@@ -269,7 +269,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project html/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project html/index.html" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/SHIN STUDIOS WHITE.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
@@ -294,7 +294,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/flowerphoto.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/flowerphoto.jpg" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/flowerphoto.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
@@ -319,7 +319,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project illustrator  copy.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/final project illustrator  copy.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/final project illustrator  copy.jpg" alt="" class="img-fluid">
                 </div>
@@ -352,7 +352,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Itinerary Planner</h2>
+                    <h2 class="w-title">Itinerary</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Illustrator</span> / <span class="w-date">Jun 2022</span>
                     </div>
@@ -377,7 +377,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Brand Guidebook</h2>
+                    <h2 class="w-title">Guidebook</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Indesign</span> / <span class="w-date">July 2022</span>
                     </div>
@@ -394,7 +394,7 @@
 <!-- Number 4 -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/colour theory.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/colour theory.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/colour theory.jpg" alt="" class="img-fluid">
                 </div>
@@ -419,7 +419,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/BRAND GUIDEBOOK .pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/BRAND GUIDEBOOK .pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/BRAND GUIDEBOOK .jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
@@ -427,14 +427,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Personal Brand Guidebook</h2>
+                    <h2 class="w-title">Brand Guidebook</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Indesign</span> / <span class="w-date">Apr 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/BRAND GUIDEBOOK .pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/BRAND GUIDEBOOK .pdf">  <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -444,7 +444,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Business Card.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/Business Card.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/Business Card.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
                 </div>
