--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/business card - back.pdf"></a> </a><span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/Business Card.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
